[package]
name = "web_clap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4"
serde = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_qs = "0.12"
web-sys = { version = "0.3", features = [
  "Window", 
  "Document", 
  "Location", 
  "console"
] }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serde_qs = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
